--- a/examples/index.html
+++ b/examples/index.html
@@ -2,34 +2,48 @@
 <html>
 <head>
 	<title>AutoGraph.js Examples</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/prettify.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script src="js/prettify/prettify.js"></script>
 	<script src="js/highcharts.js"></script>
 	<script src="../jquery.autograph.js"></script>
+	<script src="js/examples.js"></script>
 </head>
 <body>
 	<a href="https://github.com/RobVanGroenewoud/AutoGraph.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
-
-	<h1>AutoGraph.js Examples</h1>
-	<section>
-		<article>
+	<div class="container">
+	<div class="navbar">
+		<div class="navbar-inner">
+			<div class="container">
+				<a class="brand" href=".">AutoGraph.js</a>
+			</div>
+		</div>
+	</div>
+	
+	<section class="row">
+		<article class="span6">
 			<figure data-graph="data1.xml">
 			</figure>
+
+			<h2>Code</h2>
+<pre class="prettyprint linenums">
+&lt;figure data-graph="data1.xml"&gt;
+&lt;/figure&gt;
+</pre>
 		</article>
-		<article>
+		<article class="span6">
 			<figure data-graph="data2.xml">
 			</figure>
+
+			<h2>Code</h2>
+<pre class="prettyprint linenums">
+&lt;figure data-graph="data2.xml"&gt;
+&lt;/figure&gt;
+</pre>
 		</article>
 	</section>
-
-	<section>
-		<h2>Code</h2>
-		<pre>
-			&lt;figure data-graph="data1.xml"&gt;
-			&lt;/figure&gt;
-		</pre>
-	</section>
-
-
+	
+	</div>
 </body>
 </html>
