--- a/examples/index.html
+++ b/examples/index.html
@@ -4,46 +4,105 @@
 	<title>AutoGraph.js Examples</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/prettify.css">
+	<link rel="stylesheet" href="css/docs.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="js/prettify/prettify.js"></script>
 	<script src="js/highcharts.js"></script>
 	<script src="../jquery.autograph.js"></script>
 	<script src="js/examples.js"></script>
 </head>
-<body>
-	<a href="https://github.com/RobVanGroenewoud/AutoGraph.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
-	<div class="container">
-	<div class="navbar">
+<body>	
+	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
 				<a class="brand" href=".">AutoGraph.js</a>
 			</div>
 		</div>
 	</div>
-	
-	<section class="row">
-		<article class="span6">
-			<figure data-graph="data1.xml">
-			</figure>
 
-			<h2>Code</h2>
+	<div class="container">
+		<header class="jumbotron subhead" id="overview">
+			<h1>Examples</h1>
+			<p class="lead">AutoGraph.js supports multiple ways to define graphs. This examples page shows the various options.</p>
+			<div class="subnav">
+				<ul class="nav nav-pills">
+					<li><a href="#minimal">Minimal</a></li>
+					<li><a href="#advanced">Advanced</a></li>
+					<li><a href="#error">Error</a></li>
+				</ul>
+			</div>
+		</header>
+
+	<section id="minimal">
+		<div class="page-header">
+			<h1>Minimal <small>Default configuration</small></h1>
+		</div>
+		<div class="row">
+			<div class="span6">
+				<div class="well">
+					<figure data-graph="data1.xml">
+					</figure>
+				</div>
+			</div>
+			<article class="span6">
+				<h2>Code</h2>
 <pre class="prettyprint linenums">
 &lt;figure data-graph="data1.xml"&gt;
 &lt;/figure&gt;
 </pre>
-		</article>
-		<article class="span6">
-			<figure data-graph="data2.xml">
-			</figure>
+			</article>
+		</div>
 
-			<h2>Code</h2>
+  	</section>
+
+	<section id="advanced">
+		<div class="page-header">
+			<h1>Advanced <small>Additional settings</small></h1>
+		</div>
+		<div class="row">
+			<div class="span6">
+				<div class="well">
+					<figure data-graph="data2.xml">
+					</figure>
+				</div>
+			</div>
+			<article class="span6">
+				<h2>Code</h2>
 <pre class="prettyprint linenums">
 &lt;figure data-graph="data2.xml"&gt;
 &lt;/figure&gt;
 </pre>
-		</article>
+			</article>
+		</div>
 	</section>
-	
+
+	<section id="error">
+		<div class="page-header">
+			<h1>Error <small>In case of missing or invalid configuration</small></h1>
+		</div>
+		<div class="row">
+			<div class="span6">
+				<div class="well">
+					<figure data-graph="nonexisting.xml">
+					</figure>
+				</div>
+			</div>
+			<article class="span6">
+				<h2>Code</h2>
+<pre class="prettyprint linenums">
+&lt;figure data-graph="nonexisting.xml"&gt;
+&lt;/figure&gt;
+</pre>
+			</article>
+		</div>
+	</section>
+
+	<footer class="footer">
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>Designed and built by <a href="http://twitter.com/robvgroenewoud" target="_blank">@robvgroenewoud</a>.</p>
+        <p>Code licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>. Documentation licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
+        <p>Icons from <a href="http://glyphicons.com">Glyphicons Free</a>, licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
+      </footer>
 	</div>
 </body>
 </html>
