--- a/examples/index.html
+++ b/examples/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<title>AutoGraph.js Examples</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/prettify.css">
 	<link rel="stylesheet" href="css/docs.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -50,6 +49,7 @@
 &lt;figure data-graph="data1.xml"&gt;
 &lt;/figure&gt;
 </pre>
+				<a href="data1.xml" target="_blank" class="btn">Show data file</a>
 			</article>
 		</div>
 
@@ -62,16 +62,19 @@
 		<div class="row">
 			<div class="span6">
 				<div class="well">
-					<figure data-graph="data2.xml">
+					<figure data-graph="data2.xml" data-graph-title="Insert graph title here">
 					</figure>
 				</div>
 			</div>
 			<article class="span6">
 				<h2>Code</h2>
 <pre class="prettyprint linenums">
-&lt;figure data-graph="data2.xml"&gt;
+&lt;figure 
+data-graph="data2.xml" 
+data-graph-title="Insert graph title here"&gt;
 &lt;/figure&gt;
 </pre>
+				<a href="data2.xml" target="_blank" class="btn">Show data file</a>
 			</article>
 		</div>
 	</section>
