Add link to examples

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
       <span class="small">by <a href="https://github.com/RobVanGroenewoud">RobVanGroenewoud</a></span></h1>
 
     <div class="description">
-      jQuery plugin to create graphs without having to write javascript.
+      <p>jQuery plugin to create graphs without having to write javascript.</p>
+      <a href="examples">Interactive examples here</a>
     </div>
 
     
