Add support for hiding and stacking of series

--- a/examples/index.html
+++ b/examples/index.html
@@ -59,6 +59,13 @@
 								<option>areaspline</option>
 								<option>scatter</option>
 							</select>
+							<label>Stacking</label>
+							<select data-option="data-graph-stacking">
+								<option></option>
+								<option>normal</option>
+								<option>percent</option>
+							</select>
+							<span class="help-inline">Leave empty to disable stacking</span>
 							<label>Graph Title</label>
 							<input type="text" class="span3" data-option="data-graph-title" placeholder="Graph title...">
 							<span class="help-inline">Leave empty to hide</span>
