--- a/examples/index.html
+++ b/examples/index.html
@@ -77,6 +77,7 @@
 							<span class="help-inline">Leave empty to hide</span>
 							<div class="form-actions">
 								<button type="submit" class="btn btn-primary"><i class="icon-refresh icon-white"></i> Preview</button>
+								<a id="showdata" class="btn disabled" target="_blank"><i class="icon-file"></i> Show data</a>
 							</div>
 						</form>
 					</article>
